[gd_scene load_steps=14 format=3 uid="uid://bc070y87hjr30"]

[ext_resource type="Script" path="res://Scripts/CometMan.gd" id="1_16l6y"]
[ext_resource type="Material" uid="uid://mhsx4nrbac86" path="res://Assets/Materials/Asteroid.tres" id="2_a6jkx"]
[ext_resource type="ArrayMesh" uid="uid://cfu7vvh6vwx42" path="res://Assets/Obj/Asteroid.obj" id="3_88pg1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_m446e"]
radius = 0.6

[sub_resource type="SphereShape3D" id="SphereShape3D_q6ujo"]
radius = 0.55

[sub_resource type="Curve" id="Curve_tf4ye"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rxa0p"]
curve = SubResource("Curve_tf4ye")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0huy7"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
angle_curve = SubResource("CurveTexture_rxa0p")
gravity = Vector3(0, 0, 0)
scale_min = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_67hbk"]
albedo_color = Color(7.21961e-06, 0.557683, 0.736719, 1)
roughness = 0.5
emission_enabled = true
emission = Color(0, 0.612849, 0.758384, 1)
emission_energy_multiplier = 10.0

[sub_resource type="BoxMesh" id="BoxMesh_kb5xy"]
material = SubResource("StandardMaterial3D_67hbk")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sl2fy"]
emission_shape = 2
emission_sphere_radius = 1.0
gravity = Vector3(0, 9.8, 0)
scale_min = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6f2f0"]
albedo_color = Color(1, 0, 0, 1)
roughness = 0.5
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0

[sub_resource type="CylinderMesh" id="CylinderMesh_hp0rd"]
material = SubResource("StandardMaterial3D_6f2f0")
top_radius = 0.1
bottom_radius = 0.1
height = 0.1

[node name="CometMan" type="CharacterBody3D"]
collision_mask = 14
script = ExtResource("1_16l6y")
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_a6jkx")
mesh = ExtResource("3_88pg1")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 14
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_m446e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_q6ujo")

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 128
lifetime = 0.5
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_0huy7")
draw_pass_1 = SubResource("BoxMesh_kb5xy")

[node name="PowerUpParticle" type="GPUParticles3D" parent="."]
visible = false
amount = 64
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_sl2fy")
draw_pass_1 = SubResource("CylinderMesh_hp0rd")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
